ui/apps/platform/cypress/fixtures/network/centralDeployment.json
{
    "id": "9015bcfd-30c8-11eb-adc5-025000000001",
    "name": "central",
    "hash": "90609658334916123",
    "type": "Deployment",
    "namespace": "stackrox",
    "namespaceId": "3900bbc7-dbd4-11ea-973b-025000000001",
    "replicas": "1",
    "labels": {
        "app": "central",
        "app.kubernetes.io/component": "central",
        "app.kubernetes.io/instance": "stackrox-central-services",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "stackrox",
        "app.kubernetes.io/part-of": "stackrox-central-services",
        "app.kubernetes.io/version": "3.0.52.x-63-g8b76abe2a7",
        "helm.sh/chart": "stackrox-central-services-52.0.63-g8b76abe2a7"
    },
    "podLabels": {
        "app": "central",
        "app.kubernetes.io/component": "central",
        "app.kubernetes.io/instance": "stackrox-central-services",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "stackrox",
        "app.kubernetes.io/part-of": "stackrox-central-services",
        "app.kubernetes.io/version": "3.0.52.x-63-g8b76abe2a7",
        "helm.sh/chart": "stackrox-central-services-52.0.63-g8b76abe2a7"
    },
    "labelSelector": { "matchLabels": { "app": "central" }, "requirements": [] },
    "created": "2020-11-28T11:32:38Z",
    "clusterId": "3c5192eb-48e9-4dd7-8c9d-ccf196595fe1",
    "clusterName": "remote",
    "containers": [
        {
            "id": "9015bcfd-30c8-11eb-adc5-025000000001:central",
            "config": {
                "env": [
                    { "key": "ROX_OFFLINE_MODE", "value": "false", "envVarSource": "RAW" },
                    { "key": "ROX_DEVELOPMENT_BUILD", "value": "true", "envVarSource": "RAW" },
                    { "key": "ROX_NETWORK_ACCESS_LOG", "value": "false", "envVarSource": "RAW" },
                    {
                        "key": "ROX_SENSOR_INSTALLATION_EXPERIENCE",
                        "value": "true",
                        "envVarSource": "RAW"
                    }
                ],
                "command": ["/stackrox/central-entrypoint.sh"],
                "args": [],
                "directory": "",
                "user": "",
                "uid": "0"
            },
            "image": {
                "id": "sha256:de04a5f18de6f5826d0647ca3af3bae4ed78b3971c84da3192a489a0c017ae3d",
                "name": {
                    "registry": "docker.io",
                    "remote": "stackrox/main",
                    "tag": "3.0.52.x-63-g8b76abe2a7",
                    "fullName": "docker.io/stackrox/main:3.0.52.x-63-g8b76abe2a7"
                },
                "notPullable": false
            },
            "securityContext": {
                "privileged": false,
                "selinux": null,
                "dropCapabilities": ["NET_RAW"],
                "addCapabilities": [],
                "readOnlyRootFilesystem": true
            },
            "volumes": [
                {
                    "name": "varlog",
                    "source": "",
                    "destination": "/var/log/stackrox/",
                    "readOnly": false,
                    "type": "EmptyDir"
                },
                {
                    "name": "central-tmp-volume",
                    "source": "",
                    "destination": "/tmp",
                    "readOnly": false,
                    "type": "EmptyDir"
                },
                {
                    "name": "central-etc-pki-volume",
                    "source": "",
                    "destination": "/etc/pki/ca-trust",
                    "readOnly": false,
                    "type": "EmptyDir"
                },
                {
                    "name": "central-config-volume",
                    "source": "central-config",
                    "destination": "/etc/stackrox",
                    "readOnly": false,
                    "type": "ConfigMap"
                },
                {
                    "name": "endpoints-config-volume",
                    "source": "central-endpoints",
                    "destination": "/etc/stackrox.d/endpoints/",
                    "readOnly": true,
                    "type": "ConfigMap"
                }
            ],
            "ports": [
                {
                    "name": "api",
                    "containerPort": 8443,
                    "protocol": "TCP",
                    "exposure": "INTERNAL",
                    "exposedPort": 0,
                    "exposureInfos": [
                        {
                            "level": "INTERNAL",
                            "serviceName": "central",
                            "serviceId": "6b823378-316d-11eb-adc6-025000000001",
                            "serviceClusterIp": "10.109.29.64",
                            "servicePort": 443,
                            "nodePort": 0,
                            "externalIps": [],
                            "externalHostnames": []
                        }
                    ]
                }
            ],
            "secrets": [
                { "name": "central-tls", "path": "/run/secrets/stackrox.io/certs/" },
                {
                    "name": "central-default-tls-cert",
                    "path": "/run/secrets/stackrox.io/default-tls-cert/"
                },
                { "name": "central-htpasswd", "path": "/run/secrets/stackrox.io/htpasswd/" },
                { "name": "central-tls", "path": "/run/secrets/stackrox.io/jwt/" },
                { "name": "additional-ca", "path": "/usr/local/share/ca-certificates/" },
                { "name": "central-license", "path": "/run/secrets/stackrox.io/central-license/" },
                { "name": "proxy-config", "path": "/run/secrets/stackrox.io/proxy-config/" }
            ],
            "resources": {
                "cpuCoresRequest": 1,
                "cpuCoresLimit": 1,
                "memoryMbRequest": 1024,
                "memoryMbLimit": 4096
            },
            "instances": [],
            "name": "central"
        }
    ],
    "annotations": {
        "email": "support@stackrox.com",
        "meta.helm.sh/release-name": "stackrox-central-services",
        "meta.helm.sh/release-namespace": "stackrox",
        "owner": "stackrox"
    },
    "priority": "9",
    "inactive": false,
    "imagePullSecrets": [],
    "serviceAccount": "central",
    "serviceAccountPermissionLevel": "ELEVATED_IN_NAMESPACE",
    "automountServiceAccountToken": true,
    "hostNetwork": false,
    "tolerations": [],
    "ports": [
        {
            "name": "api",
            "containerPort": 8443,
            "protocol": "TCP",
            "exposure": "INTERNAL",
            "exposedPort": 0,
            "exposureInfos": [
                {
                    "level": "INTERNAL",
                    "serviceName": "central",
                    "serviceId": "6b823378-316d-11eb-adc6-025000000001",
                    "serviceClusterIp": "10.109.29.64",
                    "servicePort": 443,
                    "nodePort": 0,
                    "externalIps": [],
                    "externalHostnames": []
                }
            ]
        }
    ],
    "stateTimestamp": "1606563198475093",
    "riskScore": 1.4583333,
    "processTags": []
}
