ui/apps/platform/cypress/fixtures/network/collectorDeployment.json
{
    "id": "a7956d78-30c8-11eb-adc6-025000000001",
    "name": "collector",
    "hash": "6835225243953065561",
    "type": "DaemonSet",
    "namespace": "stackrox",
    "namespaceId": "3900bbc7-dbd4-11ea-973b-025000000001",
    "replicas": "1",
    "labels": {
        "app": "collector",
        "app.kubernetes.io/name": "stackrox",
        "auto-upgrade.stackrox.io/component": "sensor",
        "service": "collector"
    },
    "podLabels": { "app": "collector", "service": "collector" },
    "labelSelector": { "matchLabels": { "service": "collector" }, "requirements": [] },
    "created": "2020-11-30T01:56:35Z",
    "clusterId": "8f7c2fb0-8b8e-439f-9255-7834043bcf93",
    "clusterName": "remote",
    "containers": [
        {
            "id": "a7956d78-30c8-11eb-adc6-025000000001:collector",
            "config": {
                "env": [
                    {
                        "key": "COLLECTOR_CONFIG",
                        "value": "{\"tlsConfig\":{\"caCertPath\":\"/var/run/secrets/stackrox.io/certs/ca.pem\",\"clientCertPath\":\"/var/run/secrets/stackrox.io/certs/cert.pem\",\"clientKeyPath\":\"/var/run/secrets/stackrox.io/certs/key.pem\"}}",
                        "envVarSource": "RAW"
                    },
                    { "key": "COLLECTION_METHOD", "value": "CORE_BPF", "envVarSource": "RAW" },
                    { "key": "GRPC_SERVER", "value": "sensor.stackrox:443", "envVarSource": "RAW" },
                    { "key": "ROX_COMPLIANCE_IN_ROCKSDB", "value": "true", "envVarSource": "RAW" },
                    { "key": "ROX_NETWORK_DETECTION", "value": "false", "envVarSource": "RAW" }
                ],
                "command": [],
                "args": [],
                "directory": "",
                "user": "",
                "uid": "0"
            },
            "image": {
                "id": "sha256:b04ba9fe4e4e276d4cd5ac1bb941ca1ad2d62632cdfa09df538190ff54a8b70c",
                "name": {
                    "registry": "docker.io",
                    "remote": "stackrox/collector",
                    "tag": "3.1.7-latest",
                    "fullName": "docker.io/stackrox/collector:3.1.7-latest"
                },
                "notPullable": false
            },
            "securityContext": {
                "privileged": true,
                "selinux": null,
                "dropCapabilities": ["NET_RAW"],
                "addCapabilities": [],
                "readOnlyRootFilesystem": true
            },
            "volumes": [
                {
                    "name": "var-run-docker-sock",
                    "source": "/var/run/docker.sock",
                    "destination": "/host/var/run/docker.sock",
                    "readOnly": true,
                    "type": "HostPath"
                },
                {
                    "name": "proc-ro",
                    "source": "/proc",
                    "destination": "/host/proc",
                    "readOnly": true,
                    "type": "HostPath"
                },
                {
                    "name": "tmpfs-module",
                    "source": "Memory",
                    "destination": "/module",
                    "readOnly": false,
                    "type": "EmptyDir"
                },
                {
                    "name": "etc-ro",
                    "source": "/etc",
                    "destination": "/host/etc",
                    "readOnly": true,
                    "type": "HostPath"
                },
                {
                    "name": "usr-lib-ro",
                    "source": "/usr/lib",
                    "destination": "/host/usr/lib",
                    "readOnly": true,
                    "type": "HostPath"
                },
                {
                    "name": "sys-ro",
                    "source": "/sys/",
                    "destination": "/host/sys",
                    "readOnly": true,
                    "type": "HostPath"
                },
                {
                    "name": "dev-ro",
                    "source": "/dev",
                    "destination": "/host/dev",
                    "readOnly": true,
                    "type": "HostPath"
                }
            ],
            "ports": [],
            "secrets": [{ "name": "collector-tls", "path": "/run/secrets/stackrox.io/certs/" }],
            "resources": {
                "cpuCoresRequest": 0.05,
                "cpuCoresLimit": 0.75,
                "memoryMbRequest": 320,
                "memoryMbLimit": 1024
            },
            "instances": [],
            "name": "collector"
        },
        {
            "id": "a7956d78-30c8-11eb-adc6-025000000001:compliance",
            "config": {
                "env": [
                    {
                        "key": "ROX_NODE_NAME",
                        "value": "Refers to field \"spec.nodeName\"",
                        "envVarSource": "FIELD"
                    },
                    {
                        "key": "ROX_SENSOR_ENDPOINT",
                        "value": "sensor.stackrox:443",
                        "envVarSource": "RAW"
                    }
                ],
                "command": ["stackrox/compliance"],
                "args": [],
                "directory": "",
                "user": "",
                "uid": "0"
            },
            "image": {
                "id": "sha256:de04a5f18de6f5826d0647ca3af3bae4ed78b3971c84da3192a489a0c017ae3d",
                "name": {
                    "registry": "docker.io",
                    "remote": "stackrox/main",
                    "tag": "3.0.52.x-63-g8b76abe2a7",
                    "fullName": "docker.io/stackrox/main:3.0.52.x-63-g8b76abe2a7"
                },
                "notPullable": false
            },
            "securityContext": {
                "privileged": false,
                "selinux": { "user": "", "role": "", "type": "container_runtime_t", "level": "" },
                "dropCapabilities": [],
                "addCapabilities": [],
                "readOnlyRootFilesystem": true
            },
            "volumes": [
                {
                    "name": "etc-ssl",
                    "source": "",
                    "destination": "/etc/ssl/",
                    "readOnly": false,
                    "type": "EmptyDir"
                },
                {
                    "name": "etc-pki-volume",
                    "source": "",
                    "destination": "/etc/pki/ca-trust/",
                    "readOnly": false,
                    "type": "EmptyDir"
                },
                {
                    "name": "host-root-ro",
                    "source": "/",
                    "destination": "/host",
                    "readOnly": true,
                    "type": "HostPath"
                }
            ],
            "ports": [],
            "secrets": [{ "name": "collector-tls", "path": "/run/secrets/stackrox.io/certs/" }],
            "resources": {
                "cpuCoresRequest": 0.01,
                "cpuCoresLimit": 1,
                "memoryMbRequest": 10,
                "memoryMbLimit": 2048
            },
            "instances": [],
            "name": "compliance"
        }
    ],
    "annotations": { "deprecated.daemonset.template.generation": "1" },
    "priority": "8",
    "inactive": false,
    "imagePullSecrets": [],
    "serviceAccount": "collector",
    "serviceAccountPermissionLevel": "NONE",
    "automountServiceAccountToken": true,
    "hostNetwork": false,
    "tolerations": [
        {
            "key": "",
            "operator": "TOLERATION_OPERATOR_EXISTS",
            "value": "",
            "taintEffect": "UNKNOWN_TAINT_EFFECT"
        }
    ],
    "ports": [],
    "stateTimestamp": "1606701401115018",
    "riskScore": 1.5,
    "processTags": []
}
