ui/apps/platform/cypress/fixtures/network/networkPolicies.json
{
    "epoch": 27,
    "nodes": [
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "c7cc3eff-dbc3-11ea-973b-025000000001",
                "deployment": {
                    "name": "kube-proxy",
                    "namespace": "kube-system",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": [],
            "nonIsolatedIngress": true,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "fa6ca92e-dbc3-11ea-973b-025000000001",
                "deployment": {
                    "name": "compose-api",
                    "namespace": "docker",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": [],
            "nonIsolatedIngress": true,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "fa73bda4-dbc3-11ea-973b-025000000001",
                "deployment": {
                    "name": "compose",
                    "namespace": "docker",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": [],
            "nonIsolatedIngress": true,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "c7975975-dbc3-11ea-973b-025000000001",
                "deployment": {
                    "name": "coredns",
                    "namespace": "kube-system",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": [],
            "nonIsolatedIngress": true,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "e3b4c687-1aa8-5ee0-aa29-ff3b291426e7",
                "deployment": {
                    "name": "static-kube-apiserver-pods",
                    "namespace": "kube-system",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": [],
            "nonIsolatedIngress": true,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "db0d194e-4483-54a7-8968-c0c1ffe96427",
                "deployment": {
                    "name": "static-kube-controller-manager-pods",
                    "namespace": "kube-system",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": [],
            "nonIsolatedIngress": true,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "6789e013-e6e6-55ee-b18b-e976fcda1cda",
                "deployment": {
                    "name": "static-kube-scheduler-pods",
                    "namespace": "kube-system",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": [],
            "nonIsolatedIngress": true,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "a76ee271-30c8-11eb-adc6-025000000001",
                "deployment": {
                    "name": "sensor",
                    "namespace": "stackrox",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": ["a6b85ad1-30c8-11eb-adc6-025000000001"],
            "nonIsolatedIngress": false,
            "nonIsolatedEgress": true,
            "outEdges": {
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "908d4e36-30c8-11eb-adc5-025000000001",
                "deployment": {
                    "name": "scanner-db",
                    "namespace": "stackrox",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": ["9088d18a-30c8-11eb-adc5-025000000001"],
            "nonIsolatedIngress": false,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "a7956d78-30c8-11eb-adc6-025000000001",
                "deployment": {
                    "name": "collector",
                    "namespace": "stackrox",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": ["a6bee7e0-30c8-11eb-adc6-025000000001"],
            "nonIsolatedIngress": false,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        {
                            "port": 8443,
                            "protocol": "L4_PROTOCOL_TCP",
                            "lastActiveTimestamp": null
                        },
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "908ae070-30c8-11eb-adc5-025000000001",
                "deployment": {
                    "name": "scanner",
                    "namespace": "stackrox",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": ["90877842-30c8-11eb-adc5-025000000001"],
            "nonIsolatedIngress": false,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "8": {
                    "properties": [
                        { "port": 5432, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "9015bcfd-30c8-11eb-adc5-025000000001",
                "deployment": {
                    "name": "central",
                    "namespace": "stackrox",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": ["9013d591-30c8-11eb-adc5-025000000001"],
            "nonIsolatedIngress": false,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "10": {
                    "properties": [
                        {
                            "port": 8080,
                            "protocol": "L4_PROTOCOL_TCP",
                            "lastActiveTimestamp": null
                        },
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": {
                "type": "DEPLOYMENT",
                "id": "ab477596-fda0-54b1-8c50-4a5f6f5578ec",
                "deployment": {
                    "name": "static-etcd-pods",
                    "namespace": "kube-system",
                    "cluster": "",
                    "listenPorts": []
                }
            },
            "internetAccess": true,
            "policyIds": [],
            "nonIsolatedIngress": true,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        },
        {
            "entity": { "type": "INTERNET", "id": "afa12424-bde3-4313-b810-bb463cbe8f90" },
            "internetAccess": true,
            "policyIds": [],
            "nonIsolatedIngress": true,
            "nonIsolatedEgress": true,
            "outEdges": {
                "7": {
                    "properties": [
                        { "port": 9443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                },
                "11": {
                    "properties": [
                        { "port": 8443, "protocol": "L4_PROTOCOL_TCP", "lastActiveTimestamp": null }
                    ]
                }
            }
        }
    ]
}
