ui/apps/platform/cypress/fixtures/network/scannerDbDeployment.json
{
    "id": "908d4e36-30c8-11eb-adc5-025000000001",
    "name": "scanner-db",
    "hash": "10886599679561283544",
    "type": "Deployment",
    "namespace": "stackrox",
    "namespaceId": "3900bbc7-dbd4-11ea-973b-025000000001",
    "replicas": "1",
    "labels": {
        "app": "scanner-db",
        "app.kubernetes.io/component": "scanner",
        "app.kubernetes.io/instance": "stackrox-central-services",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "stackrox",
        "app.kubernetes.io/part-of": "stackrox-central-services",
        "app.kubernetes.io/version": "3.0.52.x-63-g8b76abe2a7",
        "helm.sh/chart": "stackrox-central-services-52.0.63-g8b76abe2a7"
    },
    "podLabels": {
        "app": "scanner-db",
        "app.kubernetes.io/component": "scanner",
        "app.kubernetes.io/instance": "stackrox-central-services",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "stackrox",
        "app.kubernetes.io/part-of": "stackrox-central-services",
        "app.kubernetes.io/version": "3.0.52.x-63-g8b76abe2a7",
        "helm.sh/chart": "stackrox-central-services-52.0.63-g8b76abe2a7"
    },
    "labelSelector": { "matchLabels": { "app": "scanner-db" }, "requirements": [] },
    "created": "2020-11-29T20:13:21Z",
    "clusterId": "04702ffa-d492-4d7a-b3e9-ef759064be8d",
    "clusterName": "remote",
    "containers": [
        {
            "id": "908d4e36-30c8-11eb-adc5-025000000001:db",
            "config": {
                "env": [
                    { "key": "ROX_DEVELOPMENT_BUILD", "value": "true", "envVarSource": "RAW" },
                    { "key": "ROX_NETWORK_ACCESS_LOG", "value": "false", "envVarSource": "RAW" }
                ],
                "command": [
                    "/usr/local/bin/docker-entrypoint.sh",
                    "postgres",
                    "-c",
                    "config_file=/etc/postgresql.conf"
                ],
                "args": [],
                "directory": "",
                "user": "",
                "uid": "70"
            },
            "image": {
                "id": "sha256:db7dd6f9ab1c26ab7cd8734f96396f038036d43688ff3b3be327031d2865e234",
                "name": {
                    "registry": "docker.io",
                    "remote": "stackrox/scanner-db",
                    "tag": "2.7.0",
                    "fullName": "docker.io/stackrox/scanner-db:2.7.0"
                },
                "notPullable": false
            },
            "securityContext": {
                "privileged": false,
                "selinux": null,
                "dropCapabilities": [],
                "addCapabilities": [],
                "readOnlyRootFilesystem": false
            },
            "volumes": [
                {
                    "name": "db-data",
                    "source": "",
                    "destination": "/var/lib/postgresql/data",
                    "readOnly": false,
                    "type": "EmptyDir"
                }
            ],
            "ports": [
                {
                    "name": "https-db",
                    "containerPort": 5432,
                    "protocol": "TCP",
                    "exposure": "INTERNAL",
                    "exposedPort": 0,
                    "exposureInfos": [
                        {
                            "level": "INTERNAL",
                            "serviceName": "scanner-db",
                            "serviceId": "53cee493-327f-11eb-adc6-025000000001",
                            "serviceClusterIp": "10.101.131.229",
                            "servicePort": 5432,
                            "nodePort": 0,
                            "externalIps": [],
                            "externalHostnames": []
                        }
                    ]
                }
            ],
            "secrets": [
                { "name": "scanner-db-tls", "path": "/run/secrets/stackrox.io/certs" },
                { "name": "scanner-db-password", "path": "/run/secrets/stackrox.io/secrets" }
            ],
            "resources": {
                "cpuCoresRequest": 0.2,
                "cpuCoresLimit": 2,
                "memoryMbRequest": 200,
                "memoryMbLimit": 4096
            },
            "instances": [],
            "name": "db"
        }
    ],
    "annotations": {
        "email": "support@stackrox.com",
        "meta.helm.sh/release-name": "stackrox-central-services",
        "meta.helm.sh/release-namespace": "stackrox",
        "owner": "stackrox"
    },
    "priority": "7",
    "inactive": false,
    "imagePullSecrets": [],
    "serviceAccount": "scanner",
    "serviceAccountPermissionLevel": "NONE",
    "automountServiceAccountToken": true,
    "hostNetwork": false,
    "tolerations": [],
    "ports": [
        {
            "name": "https-db",
            "containerPort": 5432,
            "protocol": "TCP",
            "exposure": "INTERNAL",
            "exposedPort": 0,
            "exposureInfos": [
                {
                    "level": "INTERNAL",
                    "serviceName": "scanner-db",
                    "serviceId": "53cee493-327f-11eb-adc6-025000000001",
                    "serviceClusterIp": "10.101.131.229",
                    "servicePort": 5432,
                    "nodePort": 0,
                    "externalIps": [],
                    "externalHostnames": []
                }
            ]
        }
    ],
    "stateTimestamp": "1606680828465956",
    "riskScore": 1.5125,
    "processTags": []
}
