ui/apps/platform/cypress/fixtures/network/sensorDeployment.json
{
    "id": "a76ee271-30c8-11eb-adc6-025000000001",
    "name": "sensor",
    "hash": "11555868684113684391",
    "type": "Deployment",
    "namespace": "stackrox",
    "namespaceId": "3900bbc7-dbd4-11ea-973b-025000000001",
    "replicas": "1",
    "labels": {
        "app": "sensor",
        "app.kubernetes.io/name": "stackrox",
        "auto-upgrade.stackrox.io/component": "sensor"
    },
    "podLabels": { "app": "sensor" },
    "labelSelector": { "matchLabels": { "app": "sensor" }, "requirements": [] },
    "created": "2020-11-30T01:56:35Z",
    "clusterId": "8f7c2fb0-8b8e-439f-9255-7834043bcf93",
    "clusterName": "remote",
    "containers": [
        {
            "id": "a76ee271-30c8-11eb-adc6-025000000001:sensor",
            "config": {
                "env": [
                    {
                        "key": "ROX_CENTRAL_ENDPOINT",
                        "value": "central.stackrox:443",
                        "envVarSource": "RAW"
                    },
                    {
                        "key": "ROX_SENSOR_ENDPOINT",
                        "value": "sensor.stackrox:443",
                        "envVarSource": "RAW"
                    },
                    { "key": "ROX_OFFLINE_MODE", "value": "false", "envVarSource": "RAW" },
                    { "key": "ROX_COMPLIANCE_IN_ROCKSDB", "value": "true", "envVarSource": "RAW" },
                    { "key": "ROX_NETWORK_DETECTION", "value": "false", "envVarSource": "RAW" }
                ],
                "command": ["kubernetes-sensor"],
                "args": [],
                "directory": "",
                "user": "",
                "uid": "0"
            },
            "image": {
                "id": "sha256:de04a5f18de6f5826d0647ca3af3bae4ed78b3971c84da3192a489a0c017ae3d",
                "name": {
                    "registry": "docker.io",
                    "remote": "stackrox/main",
                    "tag": "3.0.52.x-63-g8b76abe2a7",
                    "fullName": "docker.io/stackrox/main:3.0.52.x-63-g8b76abe2a7"
                },
                "notPullable": false
            },
            "securityContext": {
                "privileged": false,
                "selinux": null,
                "dropCapabilities": [],
                "addCapabilities": [],
                "readOnlyRootFilesystem": true
            },
            "volumes": [
                {
                    "name": "varlog",
                    "source": "",
                    "destination": "/var/log/stackrox/",
                    "readOnly": false,
                    "type": "EmptyDir"
                },
                {
                    "name": "sensor-etc-ssl-volume",
                    "source": "",
                    "destination": "/etc/ssl/",
                    "readOnly": false,
                    "type": "EmptyDir"
                },
                {
                    "name": "sensor-etc-pki-volume",
                    "source": "",
                    "destination": "/etc/pki/ca-trust/",
                    "readOnly": false,
                    "type": "EmptyDir"
                }
            ],
            "ports": [
                {
                    "name": "api",
                    "containerPort": 8443,
                    "protocol": "TCP",
                    "exposure": "INTERNAL",
                    "exposedPort": 0,
                    "exposureInfos": [
                        {
                            "level": "INTERNAL",
                            "serviceName": "sensor",
                            "serviceId": "46b71a70-32af-11eb-89ef-025000000001",
                            "serviceClusterIp": "10.96.50.163",
                            "servicePort": 443,
                            "nodePort": 0,
                            "externalIps": [],
                            "externalHostnames": []
                        }
                    ]
                },
                {
                    "name": "webhook",
                    "containerPort": 9443,
                    "protocol": "TCP",
                    "exposure": "INTERNAL",
                    "exposedPort": 0,
                    "exposureInfos": [
                        {
                            "level": "INTERNAL",
                            "serviceName": "sensor-webhook",
                            "serviceId": "46c04846-32af-11eb-89ef-025000000001",
                            "serviceClusterIp": "10.100.165.235",
                            "servicePort": 443,
                            "nodePort": 0,
                            "externalIps": [],
                            "externalHostnames": []
                        }
                    ]
                }
            ],
            "secrets": [
                { "name": "sensor-tls", "path": "/run/secrets/stackrox.io/certs/" },
                { "name": "additional-ca-sensor", "path": "/usr/local/share/ca-certificates/" },
                { "name": "stackrox", "path": "" }
            ],
            "resources": {
                "cpuCoresRequest": 0.5,
                "cpuCoresLimit": 0.5,
                "memoryMbRequest": 500,
                "memoryMbLimit": 500
            },
            "instances": [],
            "name": "sensor"
        }
    ],
    "annotations": { "email": "support@stackrox.com", "owner": "stackrox" },
    "priority": "5",
    "inactive": false,
    "imagePullSecrets": ["stackrox"],
    "serviceAccount": "sensor",
    "serviceAccountPermissionLevel": "ELEVATED_CLUSTER_WIDE",
    "automountServiceAccountToken": true,
    "hostNetwork": false,
    "tolerations": [],
    "ports": [
        {
            "name": "api",
            "containerPort": 8443,
            "protocol": "TCP",
            "exposure": "INTERNAL",
            "exposedPort": 0,
            "exposureInfos": [
                {
                    "level": "INTERNAL",
                    "serviceName": "sensor",
                    "serviceId": "46b71a70-32af-11eb-89ef-025000000001",
                    "serviceClusterIp": "10.96.50.163",
                    "servicePort": 443,
                    "nodePort": 0,
                    "externalIps": [],
                    "externalHostnames": []
                }
            ]
        },
        {
            "name": "webhook",
            "containerPort": 9443,
            "protocol": "TCP",
            "exposure": "INTERNAL",
            "exposedPort": 0,
            "exposureInfos": [
                {
                    "level": "INTERNAL",
                    "serviceName": "sensor-webhook",
                    "serviceId": "46c04846-32af-11eb-89ef-025000000001",
                    "serviceClusterIp": "10.100.165.235",
                    "servicePort": 443,
                    "nodePort": 0,
                    "externalIps": [],
                    "externalHostnames": []
                }
            ]
        }
    ],
    "stateTimestamp": "1606701401110163",
    "riskScore": 1.8369566,
    "processTags": []
}
